--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ app/styles/*.css
 app/styles/css
 scenario/Sauce-Connect-latest
 test/spec/support/templates.js
-config/AWSConfig.json
+app/config/config.json
