--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "requirejs": "~2.1.10",
     "karma-requirejs": "~0.2.1",
     "karma-phantomjs-launcher": "~0.1.2",
-    "karma-chai-sinon": "~0.1.1"
+    "karma-chai-sinon": "~0.1.1",
+
+    "aws-sdk": "*"
   },
   "engines": {
     "node": ">=0.8.0"
